--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "next": "11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "react-ga": "^3.3.0",
     "react-modal": "^3.14.3",
     "scss": "^0.2.4"
   },
