--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "framer-motion": "^5.2.0",
     "html-react-parser": "^1.3.0",
     "next": "11.1.2",
     "react": "17.0.2",
