--- a/package.json
+++ b/package.json
@@ -5,17 +5,18 @@
   "scripts": {
     "dev": "next -p 8000",
     "build": "next build",
-    "start": "next start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "lint": "next lint"
   },
   "dependencies": {
     "framer-motion": "^5.2.0",
     "html-react-parser": "^1.3.0",
-    "next": "11.1.2",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-ga": "^3.3.0",
+    "next": "^13.4.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-ga4": "^2.1.0",
     "react-modal": "^3.14.3",
+    "sass": "^1.62.1",
     "scss": "^0.2.4"
   },
   "devDependencies": {
